--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,37 @@
+a:link, a:visited {
+    color: #3B5998;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .container::after, .stats:after {
   clear: both;
   display: block;
   content: '';
 }
 
+.header {
+    background-color: #3B5998;
+    color: #fff;
+    padding: 5px 0 5px 10px;
+}
+
+.stats {
+    background-color: #eee;
+    margin-bottom: 20px;
+    padding: 5px 0 10px 10px;
+}
+
+.stat {
+    float: left;
+    width: 30%;
+}
+
 .likes {
     list-style: none;
-    margin-bottom: 20px;
 }
 
 .post {
@@ -14,7 +39,7 @@
     position: relative;
     margin-left: 10px;
     margin-right: 10px;
-    height: 330px;
+    height: 280px;
     width: 350px;
 }
 
@@ -31,7 +56,7 @@
     margin: 8px 0 8px 0;
 }
 
-.stats {
+.actions {
     background-color: #eee;
 }
 
