--- a/client/views/template/linechart/linechart.html
+++ b/client/views/template/linechart/linechart.html
@@ -1,4 +1,4 @@
-<div class="row-fluid">
+<div class="row">
 	<div id="chartcontainer">
 		<!--<div id="chart" style="width:100%;height:500px;"></div> !-->
 	</div>
