--- a/client/views/start.html
+++ b/client/views/start.html
@@ -1,6 +1,7 @@
-<h1>{{header}}</h1>
-
-<div class="row">
+<h1  ng-if="data.length==0">
+	No Data Right Now :(
+</h1>
+<div class="row" ng-if="data.length>0">
 	<div class="col-md-5">
 		<span class="col-md-6">
 			<div class="row">
