--- a/client/views/start.html
+++ b/client/views/start.html
@@ -1,5 +1,14 @@
 <h1>{{header}}</h1>
 
-<pre>
-	{{data}}
-</pre>
+<accordion close-others="true">
+	<div ng-repeat="post in data">
+		 <accordion-group heading="{{post.message}}">
+			<div class="col-md-2">
+				<img ng-src="{{post.picture}}" style="width:80%; padding:10%;" />
+			</div>
+			<div class="col-md-10">
+				<h4>{{post.message}}</h4>
+			</div>
+		</accordion-group>
+	</div>
+</accordion>
