--- a/public/app/dashboard/partials/dashboard.html
+++ b/public/app/dashboard/partials/dashboard.html
@@ -1,6 +1,48 @@
-<div class="row">
-    <div class="col-sm-3"></div>
-    <div class="col-sm-3"><a href="#/likes">Likes</a></div>
-    <div class="col-sm-3"><a href="#/posts">Posts</a></div>
-    <div class="col-sm-3"></div>
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Home</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="#/posts">Post Data</a></li>
+                <li><a href="#/likes">Like Data</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
 </div>
+<div class="jumbotron">
+    <div class="shaded-lead">
+        <h1>Frontend Engineer Challenge</h1>
+
+        <p>By Luis De Avila</p>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+            <h2>Frontend Built Using</h2>
+            <ul>
+                <li>AngularJS - Frontend SPA Framework</li>
+                <li>Bootstrap 3 - Frontend Web Development Framework</li>
+                <li>Bootswatch - Open source Bootstrap-based theme</li>
+            </ul>
+        </div>
+        <div class="col-lg-6">
+            <h2>Backend Built Using</h2>
+            <ul>
+                <li>NodeJS - Server-side JavaScript Engine</li>
+                <li>ExpressJS - Web Development Framework</li>
+
+            </ul>
+        </div>
+    </div>
+</div><!-- /container -->
+<!-- End page content -->
