--- a/public/app/likes/partials/likes.html
+++ b/public/app/likes/partials/likes.html
@@ -1,1 +1,46 @@
-<p>{{data}}</p>
+<div id="wrap">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Home</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#/posts">Post Data</a></li>
+                    <li class="active"><a href="#/likes">Like Data</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+    <div class="container">
+        <h1>Data from Likes File</h1>
+        <hr/>
+        <div class="row">
+            <div class="col-sm-12">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <td>Name</td>
+                        <td>Category</td>
+                        <td>ID</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="like in likes.data">
+                        <td>{{like.name}}</td>
+                        <td>{{like.category}}</td>
+                        <td>{{like.id}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
