--- a/code_challenge/app/assets/stylesheets/application.css
+++ b/code_challenge/app/assets/stylesheets/application.css
@@ -14,10 +14,47 @@
 
 .post {
   border: 2px solid red;
-  display: block;
-  width: 33%;
+  display: inline-block;
+  width: 333px;
   padding: 2em;
+/*  max-height:700px;*/
+  overflow:auto;
 }
 #posts {
   border: 2px solid black;
+  height: 95%;
+  position: relative;
+  height: 700px;
+  overflow: scroll;
+}
+
+.post-hover {
+  border: 2px solid black;
+  position: absolute;
+  display: inline-block;
+  width: 75%;
+  height: 75%;
+  margin-left: 333px;
+  overflow: visible;
+  display: inline;
+}
+
+.article-info {
+  border: 2px solid orange;
+}
+
+h3 {
+  font-weight: 400;
+}
+
+h3:hover {
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: none;
 }
