--- a/code_challenge/app/views/posts/index.html.erb
+++ b/code_challenge/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
 <div id='contents'>
-<h1>I &hearts; CitizenNet</h1>
-<script type="text/javascript">
-</script>
+<header><h1>I &hearts; CitizenNet</h1></header>
+<div id='article-space'></div>
+</div>
