--- a/code_challenge/app/views/layouts/application.html.erb
+++ b/code_challenge/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
     <div class="container-fluid">
       <%= yield %>
       <footer>
-        <p>Created by Shawn David Broukhim</p>
+        <p>Created by <a href='http://iamshawn.me'>Shawn David Broukhim</a></p>
       </footer>
 
     </div> <!-- /container -->
