--- a/code_challenge/app/assets/stylesheets/application.css
+++ b/code_challenge/app/assets/stylesheets/application.css
@@ -13,19 +13,19 @@
  */
 
 .post {
-  border: 2px solid red;
   display: inline-block;
   width: 333px;
   padding: 2em;
   overflow:auto;
+  border-bottom: 2px solid rgba(1, 1, 1, .1);
 }
 
 #posts {
-  border: 2px solid black;
-  width: 400px;
+  border: 2px solid rgba(1, 1, 1, .1);
+  width: 333px;
   position: relative;
   height: 700px;
-  overflow: scroll;
+  overflow-y: scroll;
   margin-top: 50px;
 }
 
@@ -36,10 +36,6 @@
   height: 700px;
   margin-left: 400px;
   margin-top: 40px;
-}
-
-.article-info {
-  border: 2px solid orange;
 }
 
 h3 {
@@ -58,12 +54,23 @@ a:hover{
   text-decoration: none;
 }
 
-img {
-  width: 400px;
-  padding: 8em;
-}
 
 #recent-posts {
   padding-left: 8px;
   position: fixed;
+  margin-top: -18px;
+}
+
+#likes {
+  padding: 2em;
+  position: absolute;
+  width: 25%;
+  right: 0;
+  top: 0;
+  margin-top: 55px;
+}
+
+.like {
+  display: inline-block;
+  padding: 2em;
 }
