--- a/code_challenge/app/assets/stylesheets/application.css
+++ b/code_challenge/app/assets/stylesheets/application.css
@@ -63,14 +63,10 @@ a:hover{
 
 #likes {
   padding: 2em;
-  position: absolute;
-  width: 25%;
-  right: 0;
-  top: 0;
-  margin-top: 55px;
 }
 
 .like {
   display: inline-block;
   padding: 2em;
+  border: 2px solid rgba(1,1,1,.1);
 }
