sets up dashboard page

--- a/client/app/mainStyles.scss
+++ b/client/app/mainStyles.scss
@@ -8,9 +8,16 @@ body {
 }
 
 h1 {
-	font-size: 2em;
+	font-size: 2.2em;
 }
 
+h2 {
+	font-size: 1.6em;
+}
+
+h3 {
+	font-size: 1.2em;
+}
 
 header {
 	position: relative;
@@ -62,7 +69,7 @@ nav {
 		}
 	}
 
-
-
 }
+
+// Dashboard Styles
 
