--- a/client/partials/dashboard.html
+++ b/client/partials/dashboard.html
@@ -1,2 +1,9 @@
-<h1>This is the dashboard</h1>
-<p>{{hello}}</p>
+<div class="contain dashboardWrapper">
+	<h1>Dashboard Display</h1>
+	<p>{{hello}}</p>
+	
+	<section class="visual">
+		<h3>Visual Section</h3>
+		
+	</section>
+</div>
