--- a/client/partials/admin.html
+++ b/client/partials/admin.html
@@ -1,9 +1,12 @@
+<div dialog class="dialog">
+	<div class="status">{{status}}...</div>
+</div>
 <div class="contain adminWrapper">
 	<h1>API Administration</h1>
 	<p>{{hello}}</p>
 	<section class="saveInfo">
 		<div class="lastSave">Last Save was on {{lastTimestamp}}</div>
-		<div class="save btn">Save Information</div>
+		<div class="save btn" ng-click="apiSave()">Save Information</div>
 	</section>
 	
 	<section class="previousSaves">
@@ -27,4 +30,6 @@
 			
 		</table>
 	</section>
+
+	
 </div>
