styling and refactoring

--- a/client/app/mainStyles.scss
+++ b/client/app/mainStyles.scss
@@ -121,9 +121,14 @@ nav {
 
 	table {
 
+		tr:nth-child(even){
+			background: #eee;
+		}
+
 		th {
+			padding-left: 10px;	
 			min-width: 175px;
-			max-width: 275px;
+			max-width: 405px;
 		}
 	}
 
