--- a/client/partials/admin.html
+++ b/client/partials/admin.html
@@ -5,7 +5,7 @@
 	<div class="left adminAction">
 		<h1>API Administration</h1>
 		<section class="saveInfo">
-			<div savebtn class="save btn" ng-click="accessAPI()">Save Information</div>
+			<div savebtn class="save btn" ng-click="startAPI()">Save Information</div>
 			<div class="lastSave" ng-show="lastTimestamp">Last Save was on {{lastTimestamp}}</div>
 		</section>
 	</div>
