allows cancellation of API interval

--- a/client/partials/admin.html
+++ b/client/partials/admin.html
@@ -1,5 +1,9 @@
 <div dialog class="dialog">
-	<div class="status">{{status}}...</div>
+	<div class="status-container">
+		<p><span class="status">{{status}}...</span><span cancel class="cancel btn">Cancel</span></p>
+		
+	</div>
+	
 </div>
 <div class="contain adminWrapper">
 	<div class="left adminAction">
