--- a/client/app/mainStyles.scss
+++ b/client/app/mainStyles.scss
@@ -27,7 +27,12 @@ h3 {
 	float: right;
 }
 
+.showInline {
+	display: inline-block;
+}
+
 header {
+	z-index: 1;
 	position: relative;
 	top: 0px;
 	width: 100%;
@@ -78,7 +83,6 @@ nav {
 
 .dialog {
 	position: absolute;
-	z-index: -1;
 	top: -400px;
 	width: 100%;
 	height: 60px;
@@ -111,6 +115,28 @@ nav {
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
 }
+
+.cancel {
+	margin-left: 15px;
+	display: none;
+	z-index: 55;
+	cursor: pointer;
+	background: none;
+	width: 160px;
+	height: 0px;
+	line-height: 0em;
+	border: 2px solid white;
+
+	&:hover {
+		border: 2px solid red;
+		color: red;
+	}
+}
+
+.cancel.showInline {
+	display: inline-block;
+}
+
 
 
 .adminWrapper {
