adds visual confirmation of data-received

--- a/client/partials/admin.html
+++ b/client/partials/admin.html
@@ -17,8 +17,9 @@
 	<div class="right adminResponse">
 		<h3>Data Received</h3>
 		<!-- Use Sprite with background image to dicatate success sign -->
-		<p>Posts</p> <div postsConfirmation class="postsConfirmation"></div>
-		<p>Likes</p> <div likesConfirmation class="likesConfirmation"></div>
+		<p>Posts</p> <div postsconfirmation class="postsConfirmation"></div>
+		<br>
+		<p>Likes</p> <div likesconfirmation class="likesConfirmation"></div>
 	</div>
 	
 	<section class="previousSaves">
