--- a/client/app/mainStyles.scss
+++ b/client/app/mainStyles.scss
@@ -172,15 +172,23 @@ nav {
 	p {
 		display: inline-block;
 		margin-top: 1em;
+		width: 50px;
 	}
 
-	// .postsConfirmation {
-	// 	display: inline-block;
-	// }
+	.postsConfirmation, .likesConfirmation {
+		width: 50px;
+		height: 50px;
+		margin-left: 10px;
+		display: inline-block;
+		background: url('../assets/images/statussprite.png');
+		background-repeat: none;
+		background-position: -55px 11px;
+	}
 
-	// .likesConfirmation {
-	// 	display: inline-block;
-	// }
+	.postsConfirmation.received, .likesConfirmation.received {
+		background-position: 6px 9px;
+	}
+
 }
 
 .previousSaves {
