displays saved data from dashboard

--- a/client/partials/dashboard.html
+++ b/client/partials/dashboard.html
@@ -6,4 +6,16 @@
 		<h3>Visual Section</h3>
 		
 	</section>
+
+  <div>
+    <h3>Posts</h3>
+    {{posts}}
+  </div>
+  <br>
+  <br>
+  <br>
+  <div>
+    <h3>Likes</h3>
+    {{likes}}
+  </div>
 </div>
